from mai to pack

--- a/static/locales/ca/navitems.json
+++ b/static/locales/ca/navitems.json
@@ -61,8 +61,8 @@
   },
   {
     "id": 5,
-    "name": "Ma'i",
-    "path": "/ca/mai",
+    "name": "Pack",
+    "path": "/ca/pack",
     "class": "right"
   },
   {
