--- a/static/locales/en/navitems.json
+++ b/static/locales/en/navitems.json
@@ -61,8 +61,8 @@
   },
   {
     "id": 5,
-    "name": "Ma'i",
-    "path": "/en/mai",
+    "name": "Pack",
+    "path": "/en/pack",
     "class": "right"
   },
   {
