--- a/static/locales/ca/navitems.json
+++ b/static/locales/ca/navitems.json
@@ -61,8 +61,14 @@
   },
   {
     "id": 5,
-    "name": "Pack",
-    "path": "/ca/pack",
+    "name": "Regala",
+    "items": [
+      {
+        "id": 501,
+        "name": "Pack",
+        "path": "/ca/pack"
+      }
+    ],
     "class": "right"
   },
   {
