--- a/static/locales/en/navitems.json
+++ b/static/locales/en/navitems.json
@@ -61,8 +61,14 @@
   },
   {
     "id": 5,
-    "name": "Pack",
-    "path": "/en/pack",
+    "name": "Gift",
+    "items": [
+      {
+        "id": 501,
+        "name": "Pack",
+        "path": "/en/pack"
+      }
+    ],
     "class": "right"
   },
   {
