master , new subsection gift new copies

--- a/static/locales/ca/navitems.json
+++ b/static/locales/ca/navitems.json
@@ -65,7 +65,7 @@
     "items": [
       {
         "id": 501,
-        "name": "Pack",
+        "name": "Pack Menú&Habitació",
         "path": "/ca/pack"
       }
     ],
