--- a/static/locales/es/navitems.json
+++ b/static/locales/es/navitems.json
@@ -67,6 +67,11 @@
         "id": 501,
         "name": "Pack Menú&Habitación",
         "path": "/pack"
+      },
+      {
+        "id": 502,
+        "name": "Regala Menú Aürt",
+        "path": "/regala"
       }
     ],
     "class": "right"
