chore(static): [no-regala-menu-01022025] Removed regala route

--- a/static/locales/ca/navitems.json
+++ b/static/locales/ca/navitems.json
@@ -57,7 +57,7 @@
     {
         "id": 5,
         "name": "Regala",
-        "path": "/ca/regala",
+        "path": null,
         "class": "right"
     },
     {
