--- a/static/locales/en/navitems.json
+++ b/static/locales/en/navitems.json
@@ -57,7 +57,7 @@
     {
         "id": 5,
         "name": "Gift",
-        "path": "/en/gift",
+        "path": null,
         "class": "right"
     },
     {
