--- a/static/locales/ca/navitems.json
+++ b/static/locales/ca/navitems.json
@@ -57,7 +57,7 @@
     {
         "id": 5,
         "name": "Regala",
-        "path": null,
+        "path": "",
         "class": "right"
     },
     {
